--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,14 @@ readme = "README.md"
 authors = ["Jonathan Beaumont <hello@jonny.dev>"]
 
 [dependencies]
+anyhow = "1.0"
+reqwest = { version = "0.12", features = ["json"] }
+serde = { version = "1.0", features = ["derive"] }
+serde-aux = "4.5.0"
+serde_json = "1.0"
+thiserror = "2.0"
+typed-builder = "0.20"
+
+[dev-dependencies]
+dotenvy = "0.15"
+tokio = { version = "1.41", features = ["full"] }
