--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
+  "cSpell.language": "en-GB",
   "cSpell.words": [
     "dotenvy",
     "reqwest",
     "thiserror"
-  ]
+  ],
+  "rust-analyzer.check.command": "clippy"
 }
